ho_ex2 v1.1 %>% main.update() inClass_ex2 v1.0 <- new.update()

--- a/pnote/note1.qmd
+++ b/pnote/note1.qmd
@@ -2,6 +2,7 @@
 title: "Personal Note"
 editor: visual
 date:  2 Jan 2022
+date-modified: "`r Sys.Date()`"
 code-copy: true
 website: 
     google-analytics: "G-PKMQ2W4ZRC"
@@ -14,6 +15,24 @@ format:
     tbl-cap-location: bottom
 ---
 
+start with a clear message?
+
+reveal more patterns? dual axis bar chart for revenue vs customers vs month-to-month % change.
+
+-   rate
+
+-   percentage change
+
+-   revenue per customer plot against revenue
+
+Clarity of the message??
+
+excessive grouping resulted in lower clarity.
+
+Add texture to the bar chart differentiate age group
+
+percentage point != percent
+
 plot title - subject + details
 
 Example of title :
@@ -22,11 +41,15 @@ Example of title :
 
 Example of axis-label
 
-| chart     | label                                | remarks                                      |
-|-----------|--------------------------------------|----------------------------------------------|
-| pie chart | "Percent Enrollment by Major (2010)" | \- param + subject + variable + time context |
-|           |                                      |                                              |
-|           |                                      |                                              |
++-------------+--------------------------------------+----------------------------------------------+
+| chart       | label                                | remarks                                      |
++=============+======================================+==============================================+
+| pie chart   | "Percent Enrollment by Major (2010)" | \- param + subject + variable + time context |
++-------------+--------------------------------------+----------------------------------------------+
+|             |                                      |                                              |
++-------------+--------------------------------------+----------------------------------------------+
+|             |                                      |                                              |
++-------------+--------------------------------------+----------------------------------------------+
 
 cv = continuous variables
 
@@ -104,24 +127,24 @@ Definition :
 
 [^2]: Shaun T. (2022). What Is Kurtosis? \| Definition, Examples & Formula. Scribbr. https://www.scribbr.com/statistics/kurtosis/#:\~:text=Kurtosis%20is%20a%20measure%20of,(thin%20tails)%20are%20platykurtic.
 
-+-------------------------+------------------------------+----------------------+------+------+
-| topic                   | measure / parameter / aspect | Col3                 | Col4 | Col5 |
-+=========================+==============================+======================+======+======+
-| population distribution | total population             | absolute, percentage |      |      |
-|                         |                              |                      |      |      |
-|                         | young population             |                      |      |      |
-|                         |                              |                      |      |      |
-|                         | elderly population           |                      |      |      |
-|                         |                              |                      |      |      |
-|                         | working age population       |                      |      |      |
-+-------------------------+------------------------------+----------------------+------+------+
-|                         |                              |                      |      |      |
-+-------------------------+------------------------------+----------------------+------+------+
-|                         |                              |                      |      |      |
-+-------------------------+------------------------------+----------------------+------+------+
-|                         |                              |                      |      |      |
-+-------------------------+------------------------------+----------------------+------+------+
-|                         |                              |                      |      |      |
-+-------------------------+------------------------------+----------------------+------+------+
-|                         |                              |                      |      |      |
-+-------------------------+------------------------------+----------------------+------+------+
++-------------------------+------------------------------+----------------------+-----------+-----------+
+| topic                   | measure / parameter / aspect | Col3                 | Col4      | Col5      |
++=========================+==============================+======================+===========+===========+
+| population distribution | total population             | absolute, percentage |           |           |
+|                         |                              |                      |           |           |
+|                         | young population             |                      |           |           |
+|                         |                              |                      |           |           |
+|                         | elderly population           |                      |           |           |
+|                         |                              |                      |           |           |
+|                         | working age population       |                      |           |           |
++-------------------------+------------------------------+----------------------+-----------+-----------+
+|                         |                              |                      |           |           |
++-------------------------+------------------------------+----------------------+-----------+-----------+
+|                         |                              |                      |           |           |
++-------------------------+------------------------------+----------------------+-----------+-----------+
+|                         |                              |                      |           |           |
++-------------------------+------------------------------+----------------------+-----------+-----------+
+|                         |                              |                      |           |           |
++-------------------------+------------------------------+----------------------+-----------+-----------+
+|                         |                              |                      |           |           |
++-------------------------+------------------------------+----------------------+-----------+-----------+
