--- a/handsOn_ex2.qmd
+++ b/handsOn_ex2.qmd
@@ -89,101 +89,136 @@ skimr::skim(exam_data)
 
 # **4. DATA VISUALISATION**
 
-## **4.1 ??**
+## **4.1 Plot with Label & Annotation**
 
 ::: {.callout-warning appearance="simple" icon="false"}
-Compare histogram by R Graphics and ggplot2 -
+text
 
-### **4.1.1 Plot with R Graphics**
-
-::: {.callout-alert appearance="simple" icon="false"}
-[Usage of the code chunk below :]{style="color:#a39f9d"}
-
-[***hist( )*** - graphics -]{style="color:#d46e15"} to compute a histogram.
-:::
-
-```{r}
-ggplot(data=exam_data, 
-       aes(x= MATHS, 
-           y=ENGLISH)) +
-  geom_point() +
-  geom_smooth(method=lm, 
-              size=0.5) +  
-  geom_label(aes(label = ID), 
-             hjust = .5, 
-             vjust = -.5) +
-  coord_cartesian(xlim=c(0,100),
-                  ylim=c(0,100)) +
-  ggtitle("English scores versus Maths scores for Primary 3")
-```
-
-### **4.1.2 Plot with ggplot2**
+### **4.1.1 Overlapping Issue**
 
 ::: {.callout-alert appearance="simple" icon="false"}
 [Usage of the code chunk below :]{style="color:#a39f9d"}
 
-[***ggplot( )*** - ggplot2 -]{style="color:#d46e15"} to initialise a ggplot object.
-
--   geom_histogram( )
-
--   ggtitle( )
+[***xxx( )*** - xxx -]{style="color:#d46e15"} to compute.
 :::
 
 ```{r}
 ggplot(data = exam_data, 
-       aes(x = MATHS)) +
-  geom_histogram(bins = 10, 
-                 boundary = 100,
-                 color = "black", 
-                 fill = "grey") +
-  ggtitle("Distribution of Maths scores")
+       aes(x = MATHS, 
+           y = ENGLISH)) +
+  geom_point() +
+  geom_smooth(method = lm, 
+              size = 0.5) +  
+  geom_label(aes(label = ID), 
+             hjust = .5, 
+             vjust = -.5) +
+  coord_cartesian(xlim = c(0,100),
+                  ylim = c(0,100)) +
+  ggtitle("English scores versus Maths scores for Primary 3")
+```
+
+### **4.1.2 Solve with ggplot2 :: ggrepel**
+
+::: {.callout-alert appearance="simple" icon="false"}
+[Usage of the code chunk below :]{style="color:#a39f9d"}
+
+[***xxx( )*** - xxx -]{style="color:#d46e15"} to compute.
+:::
+
+```{r}
+ggplot(data = exam_data, 
+       aes(x = MATHS, 
+           y = ENGLISH)) +
+  geom_point() +
+  geom_smooth(method = lm, 
+              size = 0.5) +  
+  geom_label_repel(aes(label = ID), 
+                   fontface = "bold") +
+  coord_cartesian(xlim = c(0,100),
+                  ylim = c(0,100)) +
+  ggtitle("English scores versus Maths scores for Primary 3")
 ```
 
 [Remarks :]{style="color:#d69c3c"}
 
-[ggplot2 allows to customise axis labels, title, grid lines.]{style="color:#d69c3c"}
+ggrepel: 318 unlabeled data points (too many overlaps). Consider increasing max.overlaps
 :::
 
-## **4.2 Explore Functions in ggplot2**
+## **4.2 Theme Options** 
 
-### **4.2.1 Create Base for a ggplot Object**
+This exercise explore 3 themes packages, namely :
+
+1.  ggplot2 package
+
+2.  ggthemes
+
+3.  patchwork package
+
+### **4.2.1 Themes by ggplot2**
 
 ::: {.callout-warning appearance="simple" icon="false"}
-text
+There are [8 built-in themes for ggplot2](https://ggplot2.tidyverse.org/reference/index.html#themes) :
 
-#### **\-- initialise a ggplot Object**
+-   `theme_gray()`,
+
+-   `theme_bw()`,
+
+-   `theme_classic()`,
+
+-   `theme_dark()`,
+
+-   `theme_light()`,
+
+-   `theme_linedraw()`,
+
+-   `theme_minimal(),`
+
+-   `theme_void()`
+
+#### **4.2.1.1 theme_gray( )**
 
 ```{r}
 #| code-fold: false
-ggplot(data = exam_data)
+ggplot(data = exam_data, 
+             aes(x = MATHS)) +
+  geom_histogram(bins = 20, 
+                 boundary = 100,
+                 color = "grey25", 
+                 fill = "grey90") +
+  theme_gray() +  
+  ggtitle("Distribution of Maths scores") 
 ```
 
-#### **\-- introduce aesthetic mappings**
+#### **4.2.1.2 theme_bw( )**
 
 ::: {.callout-alert appearance="simple" icon="false"}
 [Usage of the code chunk below :]{style="color:#a39f9d"}
 
-[***aes( )*** - ggplot2 -]{style="color:#d46e15"} to visualise the attributes of the data.
+[***xxx( )*** - xxx -]{style="color:#d46e15"} to compute.
 :::
 
 ```{r}
 #| code-fold: false
-ggplot(data = exam_data,
-       aes(x = MATHS))
+ggplot(data = exam_data, 
+             aes(x = MATHS)) +
+  geom_histogram(bins = 20, 
+                 boundary = 100,
+                 color = "grey25", 
+                 fill = "grey90") +
+  theme_bw() +  
+  ggtitle("Distribution of Maths scores") 
 ```
 :::
 
-### **4.2.2 Add Geometric Objects**
+### **4.2.2 Themes by ggplot2 :: ggthemes**
 
 ::: {.callout-warning appearance="simple" icon="false"}
-text
-
-#### **4.2.2.1 plot bar chart**
+[ggthemes](https://mran.microsoft.com/snapshot/2016-12-28/web/packages/ggthemes/vignettes/ggthemes.html) provides extension to replicate the look of plots by Edward Tufte, Stephen Few, [Fivethirtyeight](https://fivethirtyeight.com/), [The Economist](https://www.economist.com/graphic-detail), \'Stata\', \'Excel\', and [The Wall Street Journal](https://www.pinterest.com/wsjgraphics/wsj-graphics/), among others.
 
 ::: {.callout-alert appearance="simple" icon="false"}
 [Usage of the code chunk below :]{style="color:#a39f9d"}
 
-[***geom_bar( )*** - ggplot2 -]{style="color:#d46e15"} to makes the height of the bar proportional to the number of "MaTHS".
+[***xxx( )*** - xxx -]{style="color:#d46e15"} to compute.
 
 ::: callout-note
 ## [**use geom_col( ) if the bars need to represent values in the data.**]{style="color:#3a9c88"}
@@ -192,24 +227,155 @@ text
 
 ```{r}
 #| code-fold: false
-ggplot(data = exam_data, 
-       aes(x = RACE)) +
-  geom_bar()
+ggplot(data = exam_data,
+       aes(x = MATHS)) +
+  geom_histogram(bins = 20, 
+                 boundary = 100,
+                 color = "grey25", 
+                 fill = "grey90") +
+  ggtitle("Distribution of Maths scores") +
+  theme_economist()
 ```
 
 #### 
 :::
 
+### **4.2.3 Themes by ggplot2 :: hrbrthemes**
+
+[hrbrthemes](https://cinc.rud.is/web/packages/hrbrthemes/) package provides a base theme that focuses on typographic elements, including where various labels are placed as well as the fonts that are used.
+
+-   The second goal centers around productivity for a production workflow. In fact, this \"production workflow\" is the context for where the elements of hrbrthemes should be used. Consult [this vignette](https://cran.r-project.org/web/packages/hrbrthemes/vignettes/why_hrbrthemes.html) to learn more.
+
+```{r}
+ggplot(data = exam_data, 
+             aes(x = MATHS)) +
+  geom_histogram(bins = 20, 
+                 boundary = 100,
+                 color = "grey25", 
+                 fill = "grey90") +
+  ggtitle("Distribution of Maths scores") +
+  theme_ipsum()
+```
+
+```{r}
+ggplot(data = exam_data,
+       aes(x = MATHS)) +
+  geom_histogram(bins = 20, 
+                 boundary = 100,
+                 color = "grey25", 
+                 fill = "grey90") +
+  ggtitle("Distribution of Maths scores") +
+  theme_ipsum(axis_title_size = 18, 
+              base_size = 15, 
+              grid = "Y") 
+```
+
+**\
+What can we learn from the code chunk below?**
+
+-   `axis_title_size` argument is used to increase the font size of the axis title to 18,
+
+-   `base_size` argument is used to increase the default axis label to 15, and
+
+-   `grid` argument is used to remove the x-axis grid lines.
+
+## 
+4.3 Composite Plot with Facet Option
+
+Creating Composite Graphics: pathwork methods
+
+It is not unusual that multiple graphs are required to tell a compelling visual story. There are several ggplot2 extensions provide functions to compose figure with multiple graphs. In this section, I am going to shared with you [**patchwork**](https://patchwork.data-imaginist.com/index.html).
+
+Patchwork package has a very simple syntax where we can create layouts super easily. Here\'s the general syntax that combines: - Two-Column Layout using the Plus Sign +. - Parenthesis () to create a subplot group. - Two-Row Layout using the Division Sign `\`
+
+create composite plot by combining multiple graphs. First, let us create three statistical graphics.\\
+
+```{r}
+p1 <- ggplot(data = exam_data, 
+             aes(x = MATHS)) +
+  geom_histogram(bins = 20, 
+                 boundary = 100,
+                 color = "grey25", 
+                 fill = "grey90") + 
+  coord_cartesian(xlim = c(0,100)) +
+  ggtitle("Distribution of Maths scores")
+```
+
+```{r}
+p2 <- ggplot(data = exam_data, 
+             aes(x = ENGLISH)) +
+  geom_histogram(bins = 20, 
+                 boundary = 100,
+                 color = "grey25", 
+                 fill = "grey90") +
+  coord_cartesian(xlim = c(0,100)) +
+  ggtitle("Distribution of English scores")
+```
+
+```{r}
+p3 <- ggplot(data = exam_data, 
+             aes(x = MATHS, 
+                 y = ENGLISH)) +
+  geom_point() +
+  geom_smooth(method = lm, 
+              size = 0.5) +  
+  coord_cartesian(xlim = c(0,100),
+                  ylim = c(0,100)) +
+  ggtitle("English scores versus Maths scores for Primary 3")
+```
+
+```{r}
+p1 + p2 / p3
+```
+
+\| will place the plots beside each other, while / will stack them.
+
+```{r}
+(p1 / p2) | p3
+```
+
+Plot assembly - https://patchwork.data-imaginist.com/articles/guides/assembly.html
+
+### Working with patchwork
+
+**patchwork** also provides auto-tagging capabilities, in order to identify subplots in text:
+
+```{r}
+((p1 / p2) | p3) + 
+  plot_annotation(tag_levels = 'I')
+```
+
+```{r}
+patchwork <- (p1 / p2) | p3
+patchwork & theme_economist()
+```
+
+### Working with patchwork
+
+Beside providing functions to place plots next to each other based on the provided layout. With [`inset_element()`](https://patchwork.data-imaginist.com/reference/inset_element.html) of **patchwork**, we can place one or several plots or graphic elements freely on top or below another plot
+
+```{r}
+p3 + inset_element(p2, 
+                   left = 0.02, 
+                   bottom = 0.7, 
+                   right = 0.5, 
+                   top = 1)
+```
+
 # **7. REFERENCES**
 
--   Hadley Wickham (2023) [**ggplot2: Elegant Graphics for Data Analysis**](https://ggplot2-book.org/). Online 3rd edition.
+-   T.S. Kam. (2023). Handout lesson material for Hands-on Exercise 2. Singapore Management University. https://isss608-ay2022-23jan.netlify.app/hands-on_ex/hands-on_ex02/hands-on_ex02-beyond_ggplot2#/title-slide
 
--   Winston Chang (2013) [**R Graphics Cookbook 2nd edition**](https://r-graphics.org/). Online version.
+-   [Patchwork R package goes nerd viral](https://www.littlemissdata.com/blog/patchwork)
 
--   Healy, Kieran (2019) [**Data Visualization: A practical introduction**](https://socviz.co/). Online version
+-   [ggrepel](https://ggrepel.slowkow.com/index.html)
 
--   [Learning ggplot2 on Paper -- Components](https://henrywang.nl/learning-ggplot2-on-paper-components/)
+-   [ggthemes](https://ggplot2.tidyverse.org/reference/ggtheme.html)
 
--   [Learning ggplot2 on Paper -- Layer](https://henrywang.nl/learning-ggplot2-on-paper-layer/)
+-   [hrbrthemes](https://cinc.rud.is/web/packages/hrbrthemes/)
 
--   [Learning ggplot2 on Paper -- Scale](https://henrywang.nl/tag/learning-ggplot2-on-paper/)
+-   [ggplot tips: Arranging plots](https://albert-rapp.de/post/2021-10-28-extend-plot-variety/)
+
+-   [ggplot2 Theme Elements Demonstration](https://henrywang.nl/ggplot2-theme-elements-demonstration/)
+
+-   [ggplot2 Theme Elements Reference Sheet](https://isabella-b.com/blog/ggplot2-theme-elements-reference/)
