tableauNote <- new.load(tableuNote.qmd)

--- a/takeHome/th_ex1/th_ex1.qmd
+++ b/takeHome/th_ex1/th_ex1.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Take Home Exercise 1"
+title: "TRELLIS POPULATION PYRAMIDS OF TOP 9 SINGAPORE PLANNING AREAS"
 editor: visual
 date:  16 Jan 2023
 date-modified: "`r Sys.Date()`"
@@ -435,7 +435,7 @@ Once placed these fields are placed, reverse the "**Male Population**" as entail
 :::
 :::
 
-## **3.2 Create Supplementary Chart** 
+## **3.2 Create Supplementary Chart**
 
 This section lists the steps to plot circles that reveal the differences in gender population for each planning area.
 
@@ -504,7 +504,7 @@ Set the "**Arrange Items**" to "**Single Row**".
 ::: {.callout-warning appearance="simple" icon="false"}
 The discussion will be focused on two (2) aspects, **design** and **insights.**
 
-![Figure 4.1 : Compare feasibility for visual analysis by 2 trellis layouts, Grid facet and Wrap facet for 9 population pyramids. Find out more from [my viz on Tableau Public](https://public.tableau.com/app/profile/joseph.zexeong.tan/viz/SingaporePopulationPyramindJun2022v1_3/trel3x3_d?publish=yes){style="font-size: 11pt;"} for a more interactive view.](images/image-517277541.png){fig-align="left"}
+[![Figure 4.1 : Compare feasibility for visual analysis by 2 trellis layouts, Grid facet and Wrap facet for 9 population pyramids. Find out more from [my viz on Tableau Public](https://public.tableau.com/views/Compare2TrellisLayoutsfor9PopulationPyramindsSingapore2022/trel3x3_d?:language=en-US&publish=yes&:display_count=n&:origin=viz_share_link){style="font-size: 11pt;"} for a more interactive view.](images/image-517277541.png){fig-alt="This image is to compare the feasibility of 2 trellis layout to facilitate visual analysis of 9 population pyramids." fig-align="left"}](https://public.tableau.com/views/Compare2TrellisLayoutsfor9PopulationPyramindsSingapore2022/trel3x3_d?:language=en-US&publish=yes&:display_count=n&:origin=viz_share_link)
 
 ## **Design Aspects**
 
@@ -520,7 +520,7 @@ As shown in **Figure 4.1**, these demographic plots, regardless of which type of
 
 But, the clarity and aesthetic aspects can be compromised when considering a plot for multiple contexts. Too many indicators can distract or dilute the key aspects or patterns intended to convey or highlight.
 
-![Figure 4.2 : Additional chart to supplement visual analytics. Find out more from [my viz on Tableau Public](https://public.tableau.com/views/SingaporePopulationPyramindJun2022v1_4/trel1r_d?:language=en-US&publish=yes&:display_count=n&:origin=viz_share_link) for a more interactive view.](images/image-215019503.png){fig-alt="Grid facet to plot 9 trellis population pyramids."}
+[![Figure 4.2 : Additional chart to supplement visual analytics. Find out more from [my viz on Tableau Public](https://public.tableau.com/views/IllustrateSingaporeDemographic2022withPopulationPyramindCirclesPlot/trel1r_d?:language=en-US&publish=yes&:display_count=n&:origin=viz_share_link) for a more interactive view.](images/image-215019503.png){fig-alt="Grid facet to plot 9 trellis population pyramids." fig-align="left"}](https://public.tableau.com/views/IllustrateSingaporeDemographic2022withPopulationPyramindCirclesPlot/trel1r_d?:language=en-US&publish=yes&:display_count=n&:origin=viz_share_link)
 
 #### ***Visualise the Differences for Age Group or Gender***
 
