--- a/handsOn_ex2.qmd
+++ b/handsOn_ex2.qmd
@@ -144,7 +144,7 @@ ggplot(data = exam_data,
 ggrepel: 318 unlabeled data points (too many overlaps). Consider increasing max.overlaps
 :::
 
-## **4.2 Theme Options** 
+## **4.2 Theme Options**
 
 This exercise explore 3 themes packages, namely :
 
@@ -213,7 +213,7 @@ ggplot(data = exam_data,
 ### **4.2.2 Themes by ggplot2 :: ggthemes**
 
 ::: {.callout-warning appearance="simple" icon="false"}
-[ggthemes](https://mran.microsoft.com/snapshot/2016-12-28/web/packages/ggthemes/vignettes/ggthemes.html) provides extension to replicate the look of plots by Edward Tufte, Stephen Few, [Fivethirtyeight](https://fivethirtyeight.com/), [The Economist](https://www.economist.com/graphic-detail), \'Stata\', \'Excel\', and [The Wall Street Journal](https://www.pinterest.com/wsjgraphics/wsj-graphics/), among others.
+[ggthemes](https://mran.microsoft.com/snapshot/2016-12-28/web/packages/ggthemes/vignettes/ggthemes.html) provides extension to replicate the look of plots by Edward Tufte, Stephen Few, [Fivethirtyeight](https://fivethirtyeight.com/), [The Economist](https://www.economist.com/graphic-detail), 'Stata', 'Excel', and [The Wall Street Journal](https://www.pinterest.com/wsjgraphics/wsj-graphics/), among others.
 
 ::: {.callout-alert appearance="simple" icon="false"}
 [Usage of the code chunk below :]{style="color:#a39f9d"}
@@ -244,7 +244,7 @@ ggplot(data = exam_data,
 
 [hrbrthemes](https://cinc.rud.is/web/packages/hrbrthemes/) package provides a base theme that focuses on typographic elements, including where various labels are placed as well as the fonts that are used.
 
--   The second goal centers around productivity for a production workflow. In fact, this \"production workflow\" is the context for where the elements of hrbrthemes should be used. Consult [this vignette](https://cran.r-project.org/web/packages/hrbrthemes/vignettes/why_hrbrthemes.html) to learn more.
+-   The second goal centers around productivity for a production workflow. In fact, this "production workflow" is the context for where the elements of hrbrthemes should be used. Consult [this vignette](https://cran.r-project.org/web/packages/hrbrthemes/vignettes/why_hrbrthemes.html) to learn more.
 
 ```{r}
 ggplot(data = exam_data, 
@@ -280,13 +280,14 @@ What can we learn from the code chunk below?**
 -   `grid` argument is used to remove the x-axis grid lines.
 
 ## 
+
 4.3 Composite Plot with Facet Option
 
 Creating Composite Graphics: pathwork methods
 
 It is not unusual that multiple graphs are required to tell a compelling visual story. There are several ggplot2 extensions provide functions to compose figure with multiple graphs. In this section, I am going to shared with you [**patchwork**](https://patchwork.data-imaginist.com/index.html).
 
-Patchwork package has a very simple syntax where we can create layouts super easily. Here\'s the general syntax that combines: - Two-Column Layout using the Plus Sign +. - Parenthesis () to create a subplot group. - Two-Row Layout using the Division Sign `\`
+Patchwork package has a very simple syntax where we can create layouts super easily. Here's the general syntax that combines: - Two-Column Layout using the Plus Sign +. - Parenthesis () to create a subplot group. - Two-Row Layout using the Division Sign `\`
 
 create composite plot by combining multiple graphs. First, let us create three statistical graphics.\\
 
